@@ -59,9 +59,9 @@ extern char getchar(void);
 extern void putchar(char);
 
 #if defined(SDCC_mcs51) && !defined(SDCC_USE_XSTACK)
-extern void printf_fast(code char *fmt, ...) _REENTRANT;
-extern void printf_fast_f(code char *fmt, ...) _REENTRANT;
-extern void printf_tiny(code char *fmt, ...) _REENTRANT;
+extern void printf_fast(__code char *fmt, ...) _REENTRANT;
+extern void printf_fast_f(__code char *fmt, ...) _REENTRANT;
+extern void printf_tiny(__code char *fmt, ...) _REENTRANT;
 #endif
 
 #endif /* __SDC51_STDIO_H */
